--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "build/web",
+      "src": "build/web/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "handle": "filesystem"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
